<resources>
    <!-- Name der App -->
    <string name="app_name">Haushaltsrechner</string>

    <!-- Main Activity -->
    <string name="einnahmen">Einnahmen</string>
    <string name="ausgaben">Ausgaben</string>
    <string name="uebersicht">Übersicht</string>
    <string name="neue_position">Neue Position</string>
    <string name="action_settings">Einstellungen</string>

    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Weiter</string>
    <string name="previous">Zurück</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>